# klickbrick

./: .travis.yml  README.md  notes.md  pyproject.toml
notes/: milestone1.md
src/klickbrick/: cli.py
tests/: test_klickbrick.py
