[tool.poetry]
authors = ["Justin <calleja.justin@gmail.com>"]
description = ""
name = "justinc-klickbrick"
packages = [
  {include = "klickbrick", from = "src"},
]
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
klickbrick = "klickbrick.cli:main"
